--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
             background: rgba(255, 255, 255, 0.2);
             color: #fff;
         }
-        .form-control:focus {
+        .form-templates/doctor_login.htmlcontrol:focus {
             border-color: #1cc88a;
             box-shadow: 0 0 5px rgba(28, 217, 170, 0.5);
         }
